--- a/src/Cards.css
+++ b/src/Cards.css
@@ -21,3 +21,11 @@
     #c4838c
   );
 }
+.walloffame{
+  font-family: "Nosifer", sans-serif;
+    font-weight: 500;
+    text-align: center;
+    justify-content: center;
+    opacity: 50%;
+    text-shadow: #9e6461;
+}
